# trash-compactor

./: Cargo.toml  README.md  trash-compactor.toml
src/: lib.rs  main.rs
