[package]
name = "trash-compactor"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = "2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tiktoken-rs = "0.7"
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "trash-compactor"
path = "src/main.rs"
